--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .center{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+canvas{
+    background-color: white;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.8);
+}
+
+h1{
+    margin-top: 5%;
+    margin-bottom: 1%;
+    font-size: 4vw;
+    font-family: 'Finlandica', sans-serif;
 }
