--- a/style.css
+++ b/style.css
@@ -7,15 +7,80 @@
     justify-content: center;
     align-items: center;
 }
-
 canvas{
     background-color: white;
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.8);
 }
-
 h1{
     margin-top: 2%;
     margin-bottom: 1%;
     font-size: 4vw;
     font-family: 'Finlandica', sans-serif;
+}
+.centerItems{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.right{
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: right;
+    margin-right: 30%;
+    align-items: center;
+}
+
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1em;
+    grid-auto-columns: minmax(100px, auto);
+    
+
+}
+.grid-item{
+    border: 5px solid black;
+    aspect-ratio: 1/1;
+    width: 3vw;
+}
+
+#grid-item1{
+    background: red;
+}
+#grid-item2{
+    background: orange;
+}
+#grid-item3{
+    background: yellow;
+}
+#grid-item4{
+    background: lime;
+}
+
+#grid-item5{
+    background: green;
+}
+#grid-item6{
+    background: aqua;
+}
+#grid-item7{
+    background: blue;
+}
+#grid-item8{
+    background: purple;
+}
+
+#grid-item9{
+    background: white;
+}
+#grid-item10{
+    background: lightgray;
+}
+#grid-item11{
+    background: gray;
+}
+#grid-item12{
+    background: black;
 }
