--- a/style.css
+++ b/style.css
@@ -6,33 +6,42 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 canvas{
     background-color: white;
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.8);
 }
 h1{
-    margin-top: 2%;
+    margin-top: 10px;
     margin-bottom: 1%;
-    font-size: 4vw;
+    font-size: 75px;
     font-family: 'Finlandica', sans-serif;
 }
 .centerItems{
+    float: right;
     
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* position: absolute; */
+    /* background: rebeccapurple; */
+    
+    
 }
 .right{
-    position: absolute;
     width: 100%;
     display: flex;
-    justify-content: right;
-    margin-right: 30%;
+    float: right;
+    margin-right: 100px;
     align-items: center;
 }
-
+.canvasDiv{
+    display: inline-block;
+    overflow: hidden;
+}
 .grid-container{
+    background-color: white;
+    padding: 10px;
+    box-shadow: 0px 0px 10px 5px rgba(10, 10, 0, 0.3);
+    margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 1em;
@@ -43,7 +52,7 @@ h1{
 .grid-item{
     border: 5px solid black;
     aspect-ratio: 1/1;
-    width: 3vw;
+    width: 50px;
 }
 
 #grid-item1{
