--- a/style.css
+++ b/style.css
@@ -8,58 +8,57 @@
     align-items: center;
     
 }
-canvas{
-    background-color: white;
-    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.9);
-}
 h1{
     margin-top: 10px;
     margin-bottom: 1%;
     font-size: 75px;
     font-family: 'Finlandica', sans-serif;
 }
-.centerItems{
-    float: right;
-    
-    /* position: absolute; */
-    /* background: rebeccapurple; */
-    
-    
+.slider {
+    height: 10px;
+    width: 100%; 
 }
-.right{
-    width: 100%;
-    display: flex;
-    float: right;
-    margin-right: 100px;
-    align-items: center;
-}
-.canvasDiv{
-    display: inline-block;
-    overflow: hidden;
-}
-.grid-container{
+canvas{
     background-color: white;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.9);
+}
+
+#collection{
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1%;
+}
+#leftCollection{
+    margin: 5%;
+    width: fit-content;
+    height: 100%;
+}
+
+#centerCollection{
+    width: fit-content;
+    height: 100%;
+}
+#rightCollection{
+    margin: 5%;
+    width: fit-content;
+    height: 750px;
+}
+
+.grid-container{
+    width: fit-content;
     padding: 10px;
     box-shadow: 0px 0px 10px 5px rgba(10, 10, 0, 0.3);
-    margin-top: 20px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 0fr);
     grid-gap: 1em;
-    grid-auto-columns: minmax(100px, auto);
-    
-
 }
 .grid-item{
     border: 5px solid black;
     aspect-ratio: 1/1;
     width: 50px;
 }
-
-.slidecontainer {
-    width: 100%; 
-}
-
-
 
 #grid-item1{
     background: red;
@@ -73,7 +72,6 @@ h1{
 #grid-item4{
     background: lime;
 }
-
 #grid-item5{
     background: green;
 }
@@ -86,7 +84,6 @@ h1{
 #grid-item8{
     background: purple;
 }
-
 #grid-item9{
     background: white;
 }
