--- a/style.css
+++ b/style.css
@@ -14,7 +14,21 @@ h1{
     font-size: 75px;
     font-family: 'Finlandica', sans-serif;
 }
-.slider {
+#dimensionsText{
+    font-size: 30px;
+    font-family: 'Gantari', sans-serif;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+
+}
+#dimensions{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#slider {
+    margin-top: 20px;
+    margin-bottom: 20px;
     height: 10px;
     width: 100%; 
 }
