--- a/style.css
+++ b/style.css
@@ -60,7 +60,8 @@ canvas{
     height: 750px;
 }
 
-.grid-container{
+.grid-container2{
+    align-items: center;
     width: fit-content;
     padding: 10px;
     box-shadow: 0px 0px 10px 5px rgba(10, 10, 0, 0.3);
@@ -69,9 +70,18 @@ canvas{
     grid-gap: 1em;
 }
 .grid-item{
-    border: 5px solid black;
+    box-sizing: border-box;
+    padding: 25px;
+    border: 4px solid black;
     aspect-ratio: 1/1;
     width: 50px;
+    transition-duration: 0.1s;
+}
+.grid-item:hover{
+    padding: 15px;
+}
+.grid-item:active{
+    border: 7px solid black;
 }
 
 #grid-item1{
