--- a/style.css
+++ b/style.css
@@ -21,17 +21,39 @@ h1{
 
 }
 #dimensions{
+    margin-top: 20px;
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
 #slider {
-    margin-top: 20px;
+    
     margin-bottom: 20px;
     height: 10px;
     width: 100%; 
 }
+p{
+    font-size: 20px;
+    font-family: 'Gantari', sans-serif;
+}
+
+#lineThicknesDiv{
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#lineThicknes{
+    margin-left: 2%;
+    width: 10%;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Gantari', sans-serif;
+}
+
 canvas{
     background-color: white;
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.9);
